--- a/bin/imgui.ini
+++ b/bin/imgui.ini
@@ -1,8 +1,12 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=60,31
 Size=400,400
 
 [Window][A]
-Pos=774,420
-Size=327,202
+Pos=517,18
+Size=243,129
+
+[Window][Imgui]
+Pos=689,6
+Size=109,117
 
