--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,5 +44,5 @@ find_package(SFML 2.6.1 COMPONENTS graphics audio REQUIRED)
 target_link_libraries(imgui PRIVATE sfml-graphics sfml-audio)
 target_link_libraries(Level PRIVATE sfml-graphics sfml-audio imgui)
 IF(MSVC)
-    set_property(TARGET Level PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/images")
+    set_property(TARGET Level PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
 ENDIF()
