Small working directory fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,6 @@ set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 SET(ROOT ${CMAKE_CURRENT_DIR})
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY $<$<CONFIG:Debug>:${CMAKE_SOURCE_DIR}/bin>)
 
-#set_property(TARGET 2DLevel PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/images")
-
 ADD_EXECUTABLE(Level 2DLevel.cpp 2DLevel.h)
 
 ADD_LIBRARY(imgui STATIC 
@@ -33,15 +31,17 @@ TARGET_INCLUDE_DIRECTORIES(imgui PUBLIC exts/imgui)
 SET_TARGET_PROPERTIES(imgui PROPERTIES FOLDER "exts/imgui")
 TARGET_LINK_LIBRARIES(Level INTERFACE imgui)
 
-# Set SFML to use static libraries
-set(SFML_STATIC_LIBRARIES TRUE)
-
 # Set the path to SFML directory
 set(SFML_DIR "exts/SFML/lib/cmake/SFML")
+
+# Set SFML to use static libraries
+set(SFML_STATIC_LIBRARIES TRUE)
 
 
 # Find and include SFML
 find_package(SFML 2.6.1 COMPONENTS graphics audio REQUIRED)
 target_link_libraries(imgui PRIVATE sfml-graphics sfml-audio)
 target_link_libraries(Level PRIVATE sfml-graphics sfml-audio imgui)
-SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
+IF(MSVC)
+    set_property(TARGET Level PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
+ENDIF()
